# cgtk_tsk

./: CMakeLists.txt  main.c  ui.glade  ui1.glade.bak
